<resources>
    <string name="app_name">玩安卓</string>

    <!--request-->
    <string name="request_loginExpired">用户登陆失效，请重新登陆</string>
    <string name="request_unknownCode">未知Code:%1$s</string>

    <!--main-->
    <string name="main_home">首页</string>
    <string name="main_qa">问答</string>
    <string name="main_nav">体系</string>
    <string name="main_mine">我的</string>
    <!--home-->
    <string name="home_top">置顶</string>
    <string name="home_fresh">新</string>
    <string name="home_collectSuccess">收藏成功</string>
    <string name="home_uncollectSuccess">取消收藏成功</string>
    <!--mine-->
    <string name="mine_collect">我的收藏</string>
    <string name="mine_scoreRank">积分排行</string>
    <!--login-->
    <string name="login_username">用户名</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_password">密码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_login">登录</string>
    <string name="login_toRegister">还没有账号？前往注册</string>
    <string name="login_success">登录成功</string>
    <!--register-->
    <string name="register_register">注册</string>
    <string name="register_userRegister">用户注册</string>
    <string name="register_username">用户名</string>
    <string name="register_username_hint">请输入用户名</string>
    <string name="register_password">密码</string>
    <string name="register_password_hint">请输入密码</string>
    <string name="register_repassword">重复密码</string>
    <string name="register_repassword_hint">请再次输入密码</string>
    <string name="register_success">注册成功</string>
</resources>